--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -27,7 +27,7 @@ hr.small{max-width:100px;}
 #menu-toggle{z-index:1;position:fixed;top:0;right:0;}
 #sidebar-wrapper.active{right:250px;width:250px;-webkit-transition:all 0.4s ease 0s;-moz-transition:all 0.4s ease 0s;-ms-transition:all 0.4s ease 0s;-o-transition:all 0.4s ease 0s;transition:all 0.4s ease 0s;}
 .toggle{margin:5px 5px 0 0;}
-.header{display:table;position:relative;width:100%;height:100%;background:url(../img/bg.jpg) no-repeat center center scroll;-webkit-background-size:cover;-moz-background-size:cover;background-size:cover;-o-background-size:cover;}
+.header{display:table;position:relative;width:100%;background:url(../img/bg2.png) no-repeat center center scroll;-webkit-background-size:cover;-moz-background-size:cover;background-size:cover;-o-background-size:cover;}
 .about{padding:50px 0;}
 .services{padding:50px 0;}
 .service-item{margin-bottom:30px;}
