--- a/stylish-portfolio.css
+++ b/stylish-portfolio.css
@@ -27,7 +27,13 @@ hr.small{max-width:100px;}
 #menu-toggle{z-index:1;position:fixed;top:0;right:0;}
 #sidebar-wrapper.active{right:250px;width:250px;-webkit-transition:all 0.4s ease 0s;-moz-transition:all 0.4s ease 0s;-ms-transition:all 0.4s ease 0s;-o-transition:all 0.4s ease 0s;transition:all 0.4s ease 0s;}
 .toggle{margin:5px 5px 0 0;}
-.header{display:table;position:relative;width:100%}
+
+
+.block {
+   width: 100%;
+   height: 100%;
+   animation: color-animation 3s infinite linear alternate;
+}}
 .about{padding:50px 0;}
 .services{padding:50px 0;}
 .service-item{margin-bottom:30px;}
